; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_nic.c_efx_magic_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_nic.c_efx_magic_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_channel = type { i32, i32 }

@FSF_AZ_EV_CODE = common dso_local global i32 0, align 4
@FSE_AZ_EV_CODE_DRV_GEN_EV = common dso_local global i32 0, align 4
@FSF_AZ_DRV_GEN_EV_MAGIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.efx_channel*, i32)* @efx_magic_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @efx_magic_event(%struct.efx_channel* %0, i32 %1) #0 {
  %3 = alloca %struct.efx_channel*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.efx_channel* %0, %struct.efx_channel** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @FSF_AZ_EV_CODE, align 4
  %8 = load i32, i32* @FSE_AZ_EV_CODE_DRV_GEN_EV, align 4
  %9 = load i32, i32* @FSF_AZ_DRV_GEN_EV_MAGIC, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @EFX_POPULATE_QWORD_2(i32 %6, i32 %7, i32 %8, i32 %9, i32 %10)
  %12 = load %struct.efx_channel*, %struct.efx_channel** %3, align 8
  %13 = getelementptr inbounds %struct.efx_channel, %struct.efx_channel* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.efx_channel*, %struct.efx_channel** %3, align 8
  %16 = getelementptr inbounds %struct.efx_channel, %struct.efx_channel* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @efx_generate_event(i32 %14, i32 %17, i32* %5)
  ret void
}

declare dso_local i32 @EFX_POPULATE_QWORD_2(i32, i32, i32, i32, i32) #1

declare dso_local i32 @efx_generate_event(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
